# open-canvas

./: .env.example  .gitignore  README.md  init.sh
.github/workflows/: ci.yml
apps/agents/: .env.example  langgraph.json  package.json
apps/agents-py/: .env.example  .gitignore  langgraph.json  pyproject.toml
apps/agents-py/scripts/: check-dev-server.py
apps/agents-py/src/: __init__.py  constants.py  types.py  utils.py
apps/agents-py/src/open_canvas/: __init__.py  graph.py  prompts.py  state.py
apps/agents-py/src/open_canvas/nodes/: __init__.py  custom_action.py  generate_artifact.py  generate_followup.py  generate_path.py  generate_title.py  reflect.py  reply_to_general_input.py  rewrite_artifact.py  rewrite_artifact_theme.py  rewrite_code_artifact_theme.py  update_artifact.py  update_highlighted_text.py
apps/agents-py/src/reflection/: __init__.py  graph.py  prompts.py  state.py
apps/agents-py/src/summarizer/: __init__.py  graph.py  state.py
apps/agents-py/src/thread_title/: __init__.py  graph.py  prompts.py  state.py
apps/agents-py/src/web_search/: __init__.py  graph.py  state.py
apps/agents-py/src/web_search/nodes/: __init__.py  classify_message.py  query_generator.py  search.py
apps/agents-py/tests/: __init__.py  conftest.py
apps/agents-py/tests/integration/: __init__.py  test_agent_graph.py  test_auxiliary_graphs.py
apps/agents-py/tests/unit/: __init__.py  test_generate_artifact.py  test_generate_path.py  test_rewrite_artifact.py  test_state.py  test_update_highlighted.py  test_utils.py
scripts/: phase7-gate-check.sh  system-check.sh
(+33 files in other folders)
