[project]
name = "open-canvas-agents"
version = "0.1.0"
description = "Open Canvas LangGraph Agents (Python)"
requires-python = ">=3.12"
dependencies = [
    # LangGraph 核心
    "langgraph>=1.0.5",
    "langgraph-sdk>=0.3.0",
    "langgraph-cli[inmem]>=0.3.7",

    # LangChain 核心
    "langchain-core>=0.3.25",

    # LLM 提供商
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.8",
    "langchain-fireworks>=0.2.8",
    "langchain-ollama>=0.3.0",

    # 网络搜索
    "exa-py>=1.0.0",

    # 工具库
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
